--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -11,6 +11,7 @@
     "<a href=\"https://github.com/kggold4\"><img src=\"images/github.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "<a href=\"https://www.linkedin.com/in/kfir-goldfarb/\"><img src=\"images/in.png\"  width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "<a href=\"mailto:kfir.goldfarb@msmail.ariel.ac.il\"><img src=\"images/email.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
+    "<a href=\"https://www.youtube.com/channel/UCypEWlruyG_I5A48GqB5c6g\"><img src=\"images/youtube.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "\n",
     "<br>\n",
     "\n",
@@ -174,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of movies with the title 'Hamlet' is 299\n"
+      "Number of movies with the title 'Hamlet' is 17\n"
      ]
     }
    ],
@@ -189,8 +190,16 @@
     "# How many movies have the title \"Hamlet\"?\n",
     "\n",
     "# prints the number of 'Hamlet' in title feature:\n",
-    "title_hamlet_sum = cast['title'].eq('Hamlet').sum()\n",
-    "print('Number of movies with the title \\'Hamlet\\' is {}'.format(title_hamlet_sum))"
+    "\n",
+    "# getting only the films with title of 'Hamlet'\n",
+    "title_hamlet = cast.loc[cast['title'] == 'Hamlet']\n",
+    "\n",
+    "# droping all the duplicates by year, assuming that every year there is only one film\n",
+    "title_hamlet_films = title_hamlet.drop_duplicates(subset='year',keep='first')\n",
+    "\n",
+    "# get and print the count of movise\n",
+    "title_hamlet_count = title_hamlet_films.shape[0]\n",
+    "print('Number of movies with the title \\'Hamlet\\' is {}'.format(title_hamlet_count))"
    ]
   },
   {
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -236,140 +245,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1312766</th>\n",
+       "      <th>8570</th>\n",
        "      <td>Treasure Island</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>Herschel Mayall</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>Robert Adair</td>\n",
        "      <td>actor</td>\n",
-       "      <td>Prologue Player</td>\n",
+       "      <td>Tom - Seaman</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3280557</th>\n",
+       "      <th>12141</th>\n",
        "      <td>Treasure Island</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>Eleanor Washington</td>\n",
-       "      <td>actress</td>\n",
-       "      <td>Prologue Player</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>Chris Adcock</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Pike</td>\n",
+       "      <td>26.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3046750</th>\n",
+       "      <th>14899</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>Yves Afonso</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>French captain</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38151</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Cristino Almod?var</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>O'Brien</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104905</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Lance (II) Baker</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Frank</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313097</th>\n",
        "      <td>Treasure Island</td>\n",
        "      <td>1918</td>\n",
-       "      <td>Violet Radcliffe</td>\n",
-       "      <td>actress</td>\n",
+       "      <td>Francis Carpenter</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Jim Hawkins</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345942</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Lon Chaney</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Blind Pew</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>484325</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>Richard Dawson</td>\n",
+       "      <td>actor</td>\n",
        "      <td>Long John Silver</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1167783</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>Raymond Lee</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Bit Role</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1195421</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>Elmo Lincoln</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Prologue Player</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1663860</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Victor Raider-Wexler</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Samowitz</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1731182</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Scot Thomas Robinson</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Jimmy</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1813707</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Richard Schave</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Man</td>\n",
-       "      <td>21.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2710458</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Stephanie Ittleson</td>\n",
-       "      <td>actress</td>\n",
-       "      <td>Stella</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>815338</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Rio Hackford</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Hans</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>187 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   title  year                  name     type  \\\n",
-       "1312766  Treasure Island  1918       Herschel Mayall    actor   \n",
-       "3280557  Treasure Island  1918    Eleanor Washington  actress   \n",
-       "3046750  Treasure Island  1918      Violet Radcliffe  actress   \n",
-       "1167783  Treasure Island  1918           Raymond Lee    actor   \n",
-       "1195421  Treasure Island  1918          Elmo Lincoln    actor   \n",
-       "...                  ...   ...                   ...      ...   \n",
-       "1663860  Treasure Island  1999  Victor Raider-Wexler    actor   \n",
-       "1731182  Treasure Island  1999  Scot Thomas Robinson    actor   \n",
-       "1813707  Treasure Island  1999        Richard Schave    actor   \n",
-       "2710458  Treasure Island  1999    Stephanie Ittleson  actress   \n",
-       "815338   Treasure Island  1999          Rio Hackford    actor   \n",
+       "                  title  year                name   type         character  \\\n",
+       "8570    Treasure Island  1934        Robert Adair  actor      Tom - Seaman   \n",
+       "12141   Treasure Island  1950        Chris Adcock  actor              Pike   \n",
+       "14899   Treasure Island  1985         Yves Afonso  actor    French captain   \n",
+       "38151   Treasure Island  1972  Cristino Almod?var  actor           O'Brien   \n",
+       "104905  Treasure Island  1999    Lance (II) Baker  actor             Frank   \n",
+       "313097  Treasure Island  1918   Francis Carpenter  actor       Jim Hawkins   \n",
+       "345942  Treasure Island  1920          Lon Chaney  actor        Blind Pew    \n",
+       "484325  Treasure Island  1973      Richard Dawson  actor  Long John Silver   \n",
        "\n",
-       "                character     n  \n",
-       "1312766   Prologue Player   NaN  \n",
-       "3280557   Prologue Player   NaN  \n",
-       "3046750  Long John Silver   3.0  \n",
-       "1167783          Bit Role   NaN  \n",
-       "1195421   Prologue Player   NaN  \n",
-       "...                   ...   ...  \n",
-       "1663860          Samowitz  10.0  \n",
-       "1731182             Jimmy  11.0  \n",
-       "1813707               Man  21.0  \n",
-       "2710458            Stella   7.0  \n",
-       "815338               Hans  23.0  \n",
-       "\n",
-       "[187 rows x 6 columns]"
+       "           n  \n",
+       "8570     NaN  \n",
+       "12141   26.0  \n",
+       "14899    8.0  \n",
+       "38151   18.0  \n",
+       "104905   1.0  \n",
+       "313097   1.0  \n",
+       "345942   5.0  \n",
+       "484325   1.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,10 +350,17 @@
    "source": [
     "# list all of the \"Treasure Island\" movies from earliest to most recent.\n",
     "\n",
-    "# first I get only the 'Treasure Island' value in title in cast data frame:\n",
-    "only_treasure_island = cast.loc[cast['title'] == 'Treasure Island']\n",
+    "# get only the 'Treasure Island' value in title in cast data frame:\n",
+    "title_treasure_island = cast.loc[cast['title'] == 'Treasure Island']\n",
     "\n",
-    "# sorting by year and show it:\n",
+    "# first, droping all the duplicates by year, assuming that every year there is only one film\n",
+    "title_treasure_island_films = title_treasure_island.drop_duplicates(subset='year',keep='first')\n",
+    "title_treasure_island_films\n",
+    "# print(only_one_year)\n",
+    "\n",
+    "# print(only_treasure_island)\n",
+    "\n",
+    "# # sorting by year and show it:\n",
     "only_treasure_island.sort_values(by=['year'])"
    ]
   },
