--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -245,51 +245,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8570</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1934</td>\n",
-       "      <td>Robert Adair</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Tom - Seaman</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12141</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>Chris Adcock</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Pike</td>\n",
-       "      <td>26.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14899</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>Yves Afonso</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>French captain</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38151</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>Cristino Almod?var</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>O'Brien</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104905</th>\n",
-       "      <td>Treasure Island</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Lance (II) Baker</td>\n",
-       "      <td>actor</td>\n",
-       "      <td>Frank</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>313097</th>\n",
        "      <td>Treasure Island</td>\n",
        "      <td>1918</td>\n",
@@ -308,6 +263,33 @@
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>8570</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>Robert Adair</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Tom - Seaman</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12141</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>Chris Adcock</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Pike</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38151</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Cristino Almod?var</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>O'Brien</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>484325</th>\n",
        "      <td>Treasure Island</td>\n",
        "      <td>1973</td>\n",
@@ -316,33 +298,51 @@
        "      <td>Long John Silver</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14899</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>Yves Afonso</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>French captain</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104905</th>\n",
+       "      <td>Treasure Island</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Lance (II) Baker</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>Frank</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                  title  year                name   type         character  \\\n",
-       "8570    Treasure Island  1934        Robert Adair  actor      Tom - Seaman   \n",
-       "12141   Treasure Island  1950        Chris Adcock  actor              Pike   \n",
-       "14899   Treasure Island  1985         Yves Afonso  actor    French captain   \n",
-       "38151   Treasure Island  1972  Cristino Almod?var  actor           O'Brien   \n",
-       "104905  Treasure Island  1999    Lance (II) Baker  actor             Frank   \n",
        "313097  Treasure Island  1918   Francis Carpenter  actor       Jim Hawkins   \n",
        "345942  Treasure Island  1920          Lon Chaney  actor        Blind Pew    \n",
+       "8570    Treasure Island  1934        Robert Adair  actor      Tom - Seaman   \n",
+       "12141   Treasure Island  1950        Chris Adcock  actor              Pike   \n",
+       "38151   Treasure Island  1972  Cristino Almod?var  actor           O'Brien   \n",
        "484325  Treasure Island  1973      Richard Dawson  actor  Long John Silver   \n",
+       "14899   Treasure Island  1985         Yves Afonso  actor    French captain   \n",
+       "104905  Treasure Island  1999    Lance (II) Baker  actor             Frank   \n",
        "\n",
        "           n  \n",
-       "8570     NaN  \n",
-       "12141   26.0  \n",
-       "14899    8.0  \n",
-       "38151   18.0  \n",
-       "104905   1.0  \n",
        "313097   1.0  \n",
        "345942   5.0  \n",
-       "484325   1.0  "
+       "8570     NaN  \n",
+       "12141   26.0  \n",
+       "38151   18.0  \n",
+       "484325   1.0  \n",
+       "14899    8.0  \n",
+       "104905   1.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,13 +355,9 @@
     "\n",
     "# first, droping all the duplicates by year, assuming that every year there is only one film\n",
     "title_treasure_island_films = title_treasure_island.drop_duplicates(subset='year',keep='first')\n",
-    "title_treasure_island_films\n",
-    "# print(only_one_year)\n",
     "\n",
-    "# print(only_treasure_island)\n",
-    "\n",
-    "# # sorting by year and show it:\n",
-    "only_treasure_island.sort_values(by=['year'])"
+    "# sorting by year and show it:\n",
+    "title_treasure_island_films.sort_values(by=['year'])"
    ]
   },
   {
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +378,7 @@
        "9"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
