--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -10,6 +10,7 @@
     "<a href=\"https://github.com/kggold4\"><img src=\"images/github.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "<a href=\"https://www.linkedin.com/in/kfir-goldfarb/\"><img src=\"images/in.png\"  width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "<a href=\"mailto:kfir.goldfarb@msmail.ariel.ac.il\"><img src=\"images/email.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
+    "<a href=\"https://www.youtube.com/channel/UCypEWlruyG_I5A48GqB5c6g\"><img src=\"images/youtube.png\" width=\"25px\" height=\"25px\" align=\"left\"></a>\n",
     "\n",
     "<br>\n",
     "\n",
@@ -18,6 +19,30 @@
     "<br>\n",
     "\n",
     "<img src=\"images/statimages.jpg\" width=\"90%\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 1:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 1:\n",
+    "<img src=\"images/questions/1a.png\" width=\"900px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 2:\n",
+    "<img src=\"images/questions/1b.png\" width=\"800px\" height=\"auto\" align=\"left\">"
    ]
   },
   {
