--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "### Section 1:\n",
-    "<img src=\"images/questions/1a.png\" width=\"900px\" height=\"auto\" align=\"left\">"
+    "<img src=\"images/questions/1a.png\" width=\"700px\" height=\"auto\" align=\"left\">"
    ]
   },
   {
@@ -42,7 +42,15 @@
    "metadata": {},
    "source": [
     "### Section 2:\n",
-    "<img src=\"images/questions/1b.png\" width=\"800px\" height=\"auto\" align=\"left\">"
+    "<img src=\"images/questions/1b.png\" width=\"600px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 2:\n",
+    "<img src=\"images/questions/2.png\" width=\"800px\" height=\"auto\" align=\"left\">"
    ]
   },
   {
