--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -50,7 +50,15 @@
    "metadata": {},
    "source": [
     "# Question 2:\n",
-    "<img src=\"images/questions/2.png\" width=\"800px\" height=\"auto\" align=\"left\">"
+    "<img src=\"images/questions/2.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 3:\n",
+    "<img src=\"images/questions/3.png\" width=\"900px\" height=\"auto\" align=\"left\">"
    ]
   },
   {
