update 3.1 for notebook1

--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -25,6 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <i>Part 1 - Basic Problems:</i>\n",
+    "<br>\n",
+    "\n",
     "# Question 1:"
    ]
   },
@@ -59,6 +62,17 @@
    "source": [
     "# Question 3:\n",
     "<img src=\"images/questions/3.png\" width=\"900px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <i>Part 2 - Random Variables:</i>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "# Question 1:"
    ]
   },
   {
