update 2 for notebook3

--- a/notebook3.ipynb
+++ b/notebook3.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "### this information we have about a student is:\n",
     "\n",
     "1. gender\n",
-    "2. race\n",
+    "2. race/ethnicity\n",
     "3. parental level of education\n",
     "4. lunch\n",
     "5. test preparation course"
@@ -66,7 +66,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import data:\n",
+    "students = pd.read_csv('data/StudentsPerformance.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <i>Learning about the data:</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -176,16 +193,63 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "students = pd.read_csv('data/StudentsPerformance.csv')\n",
-    "\n",
     "# first five students:\n",
     "students.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <i>Dataset Features:</i>\n",
+    "1. gender - the sex of the student (male or female)\n",
+    "2. race/ethnicity - the race/ethnicity of the student (groups) - (details on the groups below)\n",
+    "3. parental level of education - the parental level of education of the student - (details on the groups below)\n",
+    "4. lunch - if the student ate a lunch before the exams\n",
+    "5. test preparation course - if the student take a test preparation course\n",
+    "6. math score\n",
+    "7. reading score\n",
+    "8. writing score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   gender                       1000 non-null   object\n",
+      " 1   race/ethnicity               1000 non-null   object\n",
+      " 2   parental level of education  1000 non-null   object\n",
+      " 3   lunch                        1000 non-null   object\n",
+      " 4   test preparation course      1000 non-null   object\n",
+      " 5   math score                   1000 non-null   int64 \n",
+      " 6   reading score                1000 non-null   int64 \n",
+      " 7   writing score                1000 non-null   int64 \n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 62.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking if the data contains null data objects:\n",
+    "students.info()\n",
+    "\n",
+    "# as we can see the data is clean of null data objects"
    ]
   },
   {
@@ -290,13 +354,52 @@
     }
    ],
    "source": [
-    "# number of rows of the dataset:\n",
-    "# rows = students.shape()[0]\n",
-    "\n",
-    "# number of columns of the dataset:\n",
-    "# columns = students.shape()[1]\n",
-    "\n",
+    "# seeing the students scores widely\n",
     "students.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The goal of my machine learning model:\n",
+    "\n",
+    "After the data preparation, I want to take for each student the three scores: math score, reading score and writing score and merge them to one feature by the mean of the three, this feature will called score.\n",
+    "After that process we have one feature called score and have a number value between 0 and 100, i want to classified the scores to three main classes:\n",
+    "\n",
+    "1. outstanding (x >= 90)\n",
+    "2. pass (90 > x >= 60)\n",
+    "3. fail (60 > x)\n",
+    "\n",
+    "Now, the goal of the model by a given a data of a student is to predict what is the status of the student, if the studet is fail, pass or outstanding in the tests score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <i>Preparing the data:</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['female', 'male'], dtype=object)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# as we can see in 'gender' feature we have only two targets / values : (male / female)\n",
+    "students['gender'].unique()"
    ]
   },
   {
@@ -304,7 +407,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# changing the 'gender' feature valuse to number: (0 = female, 1 = male)"
+   ]
   }
  ],
  "metadata": {
