update 7.1 for notebook3

--- a/notebook3.ipynb
+++ b/notebook3.ipynb
@@ -2177,6 +2177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <i>Part 2 - regression:</i>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
