--- a/notebook3.ipynb
+++ b/notebook3.ipynb
@@ -3142,8 +3142,247 @@
     }
    ],
    "source": [
-    "# Searching for null objects in Magnitude Seismic Stations feature:\n",
+    "# Searching for null objects in Horizontal Distance feature:\n",
     "earthquakes['Horizontal Distance'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As we can see in Horizontal Distance feature we have 21808 null objects from 23232 rows\n",
+    "# I assuming that the data of Horizontal Distance is critical,\n",
+    "# and that wy I remain the feature but change each Null object to value of 0\n",
+    "earthquakes['Horizontal Distance'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22256"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Searching for null objects in Horizontal Error feature:\n",
+    "earthquakes['Horizontal Error'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# as we can see there is 22256 null objects in Horizontal Error feature from 23232 rows,\n",
+    "# so this leave us with 23232 - 22256 = 976 not null objcets,\n",
+    "# this data is so minimal and tiny that I decided to remove Horizontal Error feature\n",
+    "earthquakes.drop('Horizontal Error', inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6060"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Searching for null objects in Root Mean Square feature:\n",
+    "earthquakes['Root Mean Square'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As we can see in Root Mean Square feature we have 6060 null objects from 23232 rows\n",
+    "# I assuming that the data of Root Mean Square is critical,\n",
+    "# and that wy I remain the feature but change each Null object to value of 0\n",
+    "earthquakes['Root Mean Square'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assumming ID feature is useless for the prediction I decided to remove him:\n",
+    "earthquakes.drop('ID', inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking values of Source, Location Source and Magnitude Source features\n",
+    "# from my personal examination I see that the Source, Location Source and Magnitude Source features values are almost the same\n",
+    "# and that why I decidet to delete Location Source and Magnitude Source features and only use with Source feature\n",
+    "earthquakes.drop('Location Source', inplace=True, axis=1)\n",
+    "earthquakes.drop('Magnitude Source', inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ISCGEM' 'ISCGEMSUP' 'OFFICIAL' 'CI' 'US' 'NC' 'GCMT' 'UW' 'ATLAS' 'NN'\n",
+      " 'SE' 'AK' 'PR']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# as we can see the Source features have 13 different values\n",
+    "print(earthquakes['Source'].unique())\n",
+    "\n",
+    "# I assume the Source feature values are critical data and that why I choose to change the data do a dummie variables\n",
+    "# create dummies varables for 'Source' feature:\n",
+    "earthquakes = pd.get_dummies(earthquakes, columns=['Source'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Searching for null objects in Magnitude feature:\n",
+    "# as we can see the data of Depth feature do not contains null objects\n",
+    "earthquakes['Status'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Automatic' 'Reviewed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# as we can see the Status features have 2 different values\n",
+    "print(earthquakes['Status'].unique())\n",
+    "\n",
+    "# and because the Status feature have only two values, I decided to change the values to binary representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude                  0\n",
+       "Longitude                 0\n",
+       "Depth                     0\n",
+       "Depth Error               0\n",
+       "Depth Seismic Stations    0\n",
+       "Magnitude                 0\n",
+       "Azimuthal Gap             0\n",
+       "Horizontal Distance       0\n",
+       "Root Mean Square          0\n",
+       "ID                        0\n",
+       "Source                    0\n",
+       "Location Source           0\n",
+       "Magnitude Source          0\n",
+       "Status                    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# at last after cleaning all the null objcets, check if I miss some null objcets in any of the features in the dataset\n",
+    "# and as we can see there no null objcets any more in our dataset\n",
+    "earthquakes.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23412 entries, 0 to 23411\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Latitude                23412 non-null  float64\n",
+      " 1   Longitude               23412 non-null  float64\n",
+      " 2   Depth                   23412 non-null  float64\n",
+      " 3   Depth Error             23412 non-null  float64\n",
+      " 4   Depth Seismic Stations  23412 non-null  float64\n",
+      " 5   Magnitude               23412 non-null  float64\n",
+      " 6   Azimuthal Gap           23412 non-null  float64\n",
+      " 7   Horizontal Distance     23412 non-null  float64\n",
+      " 8   Root Mean Square        23412 non-null  float64\n",
+      " 9   ID                      23412 non-null  object \n",
+      " 10  Source                  23412 non-null  object \n",
+      " 11  Location Source         23412 non-null  object \n",
+      " 12  Magnitude Source        23412 non-null  object \n",
+      " 13  Status                  23412 non-null  object \n",
+      "dtypes: float64(9), object(5)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "earthquakes.info()"
    ]
   },
   {
@@ -3151,12 +3390,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# As we can see in Horizontal Distance feature we have 21808 null objects from 23232 rows\n",
-    "# I assuming that the data of Horizontal Distance is critical,\n",
-    "# and that wy I remain the feature but change each Null object to value of 0\n",
-    "earthquakes['Azimuthal Gap'].fillna(0, inplace=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
