update 8.5 for notebook3

--- a/notebook3.ipynb
+++ b/notebook3.ipynb
@@ -1244,8 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using KNeighborsClassifier model\n",
-    "#### Accuracy:"
+    "#### Print Accuracy function:"
    ]
   },
   {
@@ -1267,6 +1266,14 @@
     "\n",
     "    # print the accuracy\n",
     "    print('accuracy of the model is: {} %'.format(\"%.2f\" % (accuracy * 100)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using KNeighborsClassifier model\n",
+    "#### Accuracy:"
    ]
   },
   {
@@ -1294,7 +1301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Confusion matrix:"
+    "#### Plot Confusion Matrix function:"
    ]
   },
   {
@@ -1323,6 +1330,13 @@
     "\n",
     "    # show plot\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Confusion matrix:"
    ]
   },
   {
@@ -3549,11 +3563,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Confusion matrix:"
+   ]
   },
   {
    "cell_type": "code",
