update 4 for notebook1

--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -32,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,15 +71,58 @@
     "\n",
     "<br>\n",
     "\n",
-    "# Question 1:"
+    "# Question 1:\n",
+    "<img src=\"images/questions/v1.png\" width=\"700px\" height=\"auto\" align=\"left\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Question 2:\n",
+    "<img src=\"images/questions/v2.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 3:\n",
+    "<img src=\"images/questions/v3.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 4:\n",
+    "<img src=\"images/questions/v4.png\" width=\"700px\" height=\"auto\" align=\"left\">\n",
+    "<img src=\"images/questions/v4image.png\" width=\"400px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 5:\n",
+    "<img src=\"images/questions/v5.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 6:\n",
+    "<img src=\"images/questions/v6.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 7:\n",
+    "<img src=\"images/questions/v7.png\" width=\"700px\" height=\"auto\" align=\"left\">"
+   ]
   }
  ],
  "metadata": {
